file structure in js folder

--- a/feed/index.html
+++ b/feed/index.html
@@ -14,6 +14,7 @@
       defer
       src="./../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
     ></script>
+    <script type="module" src="../js/script.mjs"></script>
   </head>
   <body class="d-flex justify-content-between flex-column vh-100">
     <div>
