--- a/feed/index.html
+++ b/feed/index.html
@@ -152,6 +152,13 @@
                             placeholder="What you have in mind?"
                           />
                         </div>
+                        <div class="col mb-3">
+                          <input
+                            type="text"
+                            class="w-100 border-0 text-wrap"
+                            placeholder="#hashtag"
+                          />
+                        </div>
 
                         <div class="d-flex flex-column">
                           <label for="upload" class="mb-2 fw-medium"
@@ -198,33 +205,124 @@
             <div class="border border-dark border-opacity-25 rounded mb-4">
               <div class="col ratio ratio-1x1 bg-dark rounded-top"></div>
               <div class="col bg-white p-2">
+                <!-- Post Image-->
                 <div
                   class="d-flex align-content-between justify-content-between"
                 >
-                  <div class="d-inline-flex">
-                    <img
-                      src="https://github.com/mdo.png"
-                      alt="mdo"
-                      width="32"
-                      height="32"
-                      class="rounded-circle me-2"
-                    />
-                    <h2 class="fs-5">mariusrundereim</h2>
-                  </div>
-                  <div>
-                    <i class="bi bi-heart ps-2 pe-2"></i>
+                  <!-- Post header -->
+                  <div
+                    class="col d-flex align-content-between justify-content-between"
+                  >
+                    <div class="d-inline-flex">
+                      <img
+                        src="https://github.com/mdo.png"
+                        alt="mdo"
+                        width="32"
+                        height="32"
+                        class="rounded-circle me-2"
+                      />
+                      <h2 class="fs-5">mariusrundereim</h2>
+                    </div>
+                    <div
+                      class="d-flex align-content-center justify-content-center"
+                    >
+                      <!-- Edit post-->
+                      <div>
+                        <!-- Button trigger modal -->
+                        <button
+                          type="button"
+                          class="btn btn-outline-secondary w-100 text-center"
+                          data-bs-toggle="modal"
+                          data-bs-target="#exampleModal"
+                        >
+                          <h3 class="fs-6">Edit</h3>
+                        </button>
+                        <!-- Modal -->
+                        <div
+                          class="modal fade"
+                          id="exampleModal"
+                          tabindex="-1"
+                          aria-labelledby="exampleModalLabel"
+                          aria-hidden="true"
+                        >
+                          <div class="modal-dialog">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <input
+                                  type="text"
+                                  class="modal-title fs-5 border-0"
+                                  placeholder="New post.."
+                                  id="exampleModalLabel"
+                                />
+                                <button
+                                  type="button"
+                                  class="btn-close"
+                                  data-bs-dismiss="modal"
+                                  aria-label="Close"
+                                ></button>
+                              </div>
+                              <div class="modal-body">
+                                <div class="col mb-3">
+                                  <input
+                                    type="text"
+                                    class="w-100 border-0 text-wrap"
+                                    placeholder="What you have in mindsss?"
+                                  />
+                                </div>
+                                <div class="col mb-3">
+                                  <input
+                                    type="text"
+                                    class="w-100 border-0 text-wrap"
+                                    placeholder="#hashtags"
+                                  />
+                                </div>
+
+                                <div class="d-flex flex-column">
+                                  <label for="upload" class="mb-2 fw-medium"
+                                    >Image</label
+                                  >
+                                  <input type="text" placeholder="Insert URL" />
+                                </div>
+                              </div>
+                              <div class="modal-footer">
+                                <button
+                                  type="button"
+                                  class="btn btn-secondary"
+                                  data-bs-dismiss="modal"
+                                >
+                                  Close
+                                </button>
+                                <button type="button" class="btn btn-danger">
+                                  Delete
+                                </button>
+                                <button type="button" class="btn btn-primary">
+                                  Send
+                                </button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <i class="bi bi-heart ps-2 pe-2"></i>
+                    </div>
                   </div>
                 </div>
 
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Incidunt ullam adipisci quidem.
-                </p>
+                <!-- Post Content Body-->
+                <div>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Incidunt ullam adipisci quidem.
+                  </p>
+                </div>
+
+                <!-- Post Tags-->
                 <div class="d-inline-flex">
                   <p class="pe-2 fw-medium">#food</p>
                   <p class="pe-2 fw-medium">#avokado</p>
                   <p class="pe-2 fw-medium">#green</p>
                 </div>
+                <!-- Post Comments-->
                 <div class="d-flex m-0">
                   <button
                     type="button"
