--- a/profile/index.html
+++ b/profile/index.html
@@ -105,7 +105,7 @@
             class="mb-5 mb-lg-5 mx-auto d-flex flex-column align-content-center justify-content-center"
           >
             <img
-              src="/src/img/dummy_img_02.png"
+              src="#"
               alt="mdo"
               width="92"
               height="92"
