profile page username

--- a/profile/index.html
+++ b/profile/index.html
@@ -111,7 +111,7 @@
               height="92"
               class="rounded-circle"
             />
-            <h2 class="text-center">username</h2>
+            <h2 class="text-center" id="usernameTitle">username</h2>
             <div>
               <button type="button" class="btn btn-primary mt-5">Follow</button>
               <button type="button" class="btn btn-primary mt-5">
