profile image avatar on profile page

--- a/profile/index.html
+++ b/profile/index.html
@@ -110,6 +110,7 @@
               width="92"
               height="92"
               class="rounded-circle"
+              id="userAvatar"
             />
             <h2 class="text-center" id="usernameTitle">username</h2>
             <div>
