mudular changes as well as alerts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       defer
       src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
     ></script>
-    <script type="module" src="./js/script.mjs"></script>
+    <script
+      type="module"
+      src="./js/pages/authentication/authentication.mjs"
+    ></script>
   </head>
   <body class="bg-primary">
     <main class="container col d-sm-flex mt-5 gap-5 gap-sm-3">
