profile count displayed and starting with render posts

--- a/profile/index.html
+++ b/profile/index.html
@@ -126,15 +126,15 @@
           >
             <div class="text-center p-2 border-end flex-fill">
               <h3 class="fs-5">Following</h3>
-              <h4>3</h4>
+              <h4 id="profileCountFollowing">0</h4>
             </div>
             <div class="text-center p-2 flex-fill">
               <h3 class="fs-5">Followers</h3>
-              <h4>6</h4>
+              <h4 id="profileCountFollowers">0</h4>
             </div>
             <div class="text-center p-2 border-start flex-fill">
               <h3 class="fs-5">Posts</h3>
-              <h4>4</h4>
+              <h4 id="profileCountPosts">0</h4>
             </div>
           </div>
         </section>
@@ -147,7 +147,7 @@
             <p>Edit</p>
           </div>
           <div class="container">
-            <div class="row gap-2">
+            <div class="row gap-2" id="profilePosts">
               <div class="col ratio ratio-1x1 bg-dark"></div>
               <div class="col ratio ratio-1x1 bg-dark"></div>
               <div class="col ratio ratio-1x1 bg-dark"></div>
