display posts on profile page

--- a/profile/index.html
+++ b/profile/index.html
@@ -147,11 +147,7 @@
             <p>Edit</p>
           </div>
           <div class="container">
-            <div class="row gap-2" id="profilePosts">
-              <div class="col ratio ratio-1x1 bg-dark"></div>
-              <div class="col ratio ratio-1x1 bg-dark"></div>
-              <div class="col ratio ratio-1x1 bg-dark"></div>
-            </div>
+            <div class="row row-cols-3" id="profilePosts"></div>
           </div>
         </section>
       </main>
