created a edit profile on profile page

--- a/profile/index.html
+++ b/profile/index.html
@@ -115,9 +115,63 @@
             <h2 class="text-center" id="usernameTitle">username</h2>
             <div>
               <button type="button" class="btn btn-primary mt-5">Follow</button>
-              <button type="button" class="btn btn-primary mt-5">
-                Edit profile
+
+              <!-- Button trigger modal -->
+              <button
+                type="button"
+                class="btn btn-primary w-100 text-center"
+                data-bs-toggle="modal"
+                data-bs-target="#editProfileModal"
+              >
+                <h3 class="fs-6">Edit profile</h3>
               </button>
+              <!-- Modal -->
+              <div
+                class="modal fade"
+                id="editProfileModal"
+                tabindex="-1"
+                aria-labelledby="editProfileModalLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h3 class="fs-5">Edit profile</h3>
+                      <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                    </div>
+                    <div class="modal-body">
+                      <div class="d-flex flex-column">
+                        <label for="upload" class="mb-2 fw-medium"
+                          >Change avatar</label
+                        >
+                        <input
+                          type="text"
+                          id="changeAvatarValue"
+                          placeholder="Insert URL"
+                        />
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        data-bs-dismiss="modal"
+                      >
+                        Close
+                      </button>
+
+                      <button type="button" class="btn btn-primary">
+                        Send
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <!--Followers Panel-->
