--- a/profile/index.html
+++ b/profile/index.html
@@ -10,10 +10,7 @@
       src="./../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
     ></script>
     <script type="module" src="../js/script.mjs"></script>
-    <script
-      type="module"
-      src="../js/pages/profilePage/profilePage.mjs"
-    ></script>
+    <script type="module" src="../js/profile/profile.mjs"></script>
   </head>
   <body class="d-flex justify-content-between flex-column vh-100">
     <div>
