user can change avatar on profile page

--- a/profile/index.html
+++ b/profile/index.html
@@ -166,7 +166,11 @@
                         Close
                       </button>
 
-                      <button type="button" class="btn btn-primary">
+                      <button
+                        type="button"
+                        class="btn btn-primary"
+                        id="changeAvatarBtn"
+                      >
                         Send
                       </button>
                     </div>
