--- a/feed/index.html
+++ b/feed/index.html
@@ -221,7 +221,9 @@
             </div>
 
             <!-- Content Feed-->
+            <section id="feeds-all-posts"></section>
             <!-- Example post 1-->
+
             <div class="border border-dark border-opacity-25 rounded mb-4">
               <div class="col ratio ratio-1x1 bg-dark rounded-top"></div>
               <div class="col bg-white p-2">
