--- a/feed/index.html
+++ b/feed/index.html
@@ -16,6 +16,7 @@
     ></script>
     <script type="module" src="../js/script.mjs"></script>
     <script type="module" src="../js/pages/feedPage/feed.mjs"></script>
+    <script type="module" src="../js/layout/signOut.mjs"></script>
   </head>
   <body class="d-flex justify-content-between flex-column vh-100">
     <div>
