search post testing

--- a/feed/searchbar.html
+++ b/feed/searchbar.html
@@ -140,5 +140,9 @@
       </div>
     </div>
     <!-- Modal Ends -->
+
+    <div class="container">
+      <div id="feeds-all-posts"></div>
+    </div>
   </body>
 </html>
