--- a/feed/index.html
+++ b/feed/index.html
@@ -31,11 +31,11 @@
                 <!-- Button trigger modal -->
                 <button
                   type="button"
-                  class="btn btn-primary w-100 text-center"
+                  class="btn btn-primary w-100 text-center fw-medium"
                   data-bs-toggle="modal"
                   data-bs-target="#new-post-modal"
                 >
-                  <h3 class="fs-6">New post</h3>
+                  New post
                 </button>
                 <!-- Modal -->
                 <div
@@ -119,19 +119,19 @@
                   </div>
                 </div>
               </div>
-              <!-- Sort-->
+              <!-- Filter-->
               <div class="col col-md-3">
                 <button
-                  class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split d-flex justify-content-between align-items-center link-body-emphasis w-100"
+                  class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split d-flex justify-content-between align-items-center link-body-emphasis w-100 fw-medium"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  <h3 class="fs-6">Sort</h3>
+                  Filter
                 </button>
 
                 <ul class="dropdown-menu text-small">
-                  <li><a class="dropdown-item" href="#">Trending</a></li>
-                  <li><a class="dropdown-item" href="#">Latest</a></li>
+                  <li><a class="dropdown-item" href="#">All users</a></li>
+                  <li><a class="dropdown-item" href="#">Following</a></li>
                 </ul>
               </div>
             </div>
