show follower and following

--- a/feed/index.html
+++ b/feed/index.html
@@ -353,10 +353,11 @@
               </div>
             </div>
           </div>
-          <div class="d-none d-sm-block w-100 ps-5">
-            <h2 class="mb-2 fs-4">Followers</h2>
+          <section>
+            <div class="d-none d-sm-block w-100 ps-5" id="following-container">
+              <h2 class="mb-2 fs-4">Following</h2>
 
-            <div
+              <!-- <div
               class="list-group-item list-group-item-action d-flex py-2 gap-3"
             >
               <img
@@ -419,8 +420,12 @@
                   Unfollow
                 </button>
               </div>
-            </a>
-          </div>
+            </a> -->
+            </div>
+            <div class="d-none d-sm-block w-100 ps-5" id="follower-container">
+              <h2 class="mb-2 fs-4">Followers</h2>
+            </div>
+          </section>
         </section>
       </main>
     </div>
