created filter on feed page

--- a/feed/index.html
+++ b/feed/index.html
@@ -129,9 +129,17 @@
                   Filter
                 </button>
 
-                <ul class="dropdown-menu text-small">
-                  <li><a class="dropdown-item" href="#">All users</a></li>
-                  <li><a class="dropdown-item" href="#">Following</a></li>
+                <ul class="dropdown-menu text-small" id="filter-drop-menu">
+                  <li>
+                    <a class="dropdown-item" href="#" data-option="allUsers"
+                      >All users</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" data-option="following"
+                      >Following</a
+                    >
+                  </li>
                 </ul>
               </div>
             </div>
