--- a/feed/index.html
+++ b/feed/index.html
@@ -146,7 +146,7 @@
 
             <!-- Content Feed-->
             <section id="feeds-all-posts"></section>
-            <<<<<<< HEAD =======
+            <!-- <<<<<<< HEAD ======= -->
             <!-- Example post 1-->
 
             <div class="border border-dark border-opacity-25 rounded mb-4">
@@ -284,7 +284,7 @@
                 </div>
               </div>
             </div>
-            >>>>>>> search-posts
+            <!-- >>>>>>> search-posts -->
           </div>
           <section>
             <div class="d-none d-sm-block w-100 ps-5" id="following-container">
