new try, less buggy

--- a/feed/index.html
+++ b/feed/index.html
@@ -18,6 +18,10 @@
     <script type="module" src="../js/pages/feedPage/feed.mjs"></script>
   </head>
   <body class="d-flex justify-content-between flex-column vh-100">
+    <div
+      id="post-overlay"
+      class="z-3 d-none position-fixed vw-100 vh-100 bg-black bg-opacity-25"
+    ></div>
     <div>
       <main class="container mt-2">
         <div class="pt-3 pb-2">
