--- a/feed/post.html
+++ b/feed/post.html
@@ -20,6 +20,16 @@
   <body class="d-flex justify-content-between flex-column vh-100">
     <div id="post-overlay" class="5"></div>
 
+    <form action="">
+      <input
+        placeholder="Wrigth your comment.."
+        type="text"
+        name=""
+        id="commentInput"
+      />
+      <input type="submit" value="submit" id="commentSubmit" />
+    </form>
+
     <footer class="container">
       <div class="py-3 my-4">
         <footer class="py-3 my-4">
