comment form is center

--- a/feed/post.html
+++ b/feed/post.html
@@ -20,9 +20,9 @@
   <body class="d-flex justify-content-between flex-column vh-100">
     <div id="post-overlay" class="5"></div>
 
-    <form action="">
+    <form class="d-flex justify-content-center">
       <input
-        placeholder="Wrigth your comment.."
+        placeholder="Write your comment.."
         type="text"
         name=""
         id="commentInput"
