--- a/profile/index.html
+++ b/profile/index.html
@@ -19,7 +19,7 @@
           class="d-flex flex-column align-content-center justify-content-center"
         >
           <div
-            class="mb-5 mb-lg-5 mx-auto d-flex flex-column align-content-center justify-content-center"
+            class="mb-5 mb-lg-5 mx-auto d-flex flex-column align-content-center justify-content-center align-items-center"
           >
             <img
               src="#"
